swagger: capitalisized tag
